⚡ Bolt: Optimize ANTLR token syntax highlighting hot loop and listeners
💡 What:
- Replaced expensive regex String.split inside the syntax highlighting loop with a fast path for single-line tokens.
- Replaced ListChangeListener with InvalidationListener in EditorViewController for tokens and errors.
- Offloaded blocking LLM generation OS thread to a lightweight Java 25 Virtual Thread.
- Added performance learnings to .jules/bolt.md.

🎯 Why:
- String split with regex was creating large GC pressure and CPU overhead for every single token update, since 99% of tokens do not contain newlines.
- ListChangeListener forces JavaFX to eagerly compute list differences on every parse tick, even though the View simply triggers a full redraw, wasting CPU cycles.
- OS Threads are expensive, Virtual Threads are better for background blocking tasks.

📊 Impact:
- Drastically reduces memory allocation and GC pressure during typing.
- Eliminates unnecessary list-diffing CPU overhead on the JavaFX Application Thread.
- Faster parsing feedback in the UI editor.

🔬 Measurement:
- Run `mvn clean verify`
- Typing rapidly in the editor should consume less CPU and memory on the background token styling threads.

Co-authored-by: tkpixel <49250195+tkpixel@users.noreply.github.com>